Fix the nav buttons on mobile. Maybe.

--- a/assets/components/thomstradling.co.uk/scss/web.scss
+++ b/assets/components/thomstradling.co.uk/scss/web.scss
@@ -174,14 +174,15 @@ nav {
 		overflow: hidden;
 		height: 30px;
 		line-height: 10px;
-		padding-left: 10px;
-		padding-right: 10px;
+		padding: 10px;
 		position: absolute;
 		transition: all 0.3s;
 		width: 100%;
 
 		@include min(768px) {
 			height: 0;
+			padding-bottom: 0;
+			padding-top: 0;
 		}
 	}
 }
